remove scrollbar & fix css

--- a/LandingPage/style.css
+++ b/LandingPage/style.css
@@ -14,8 +14,12 @@ html,
   body {
     scroll-behavior: smooth;
     background: radial-gradient(rgb(139, 195, 245), #1294b8);
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
   }
-
+  body::-webkit-scrollbar {
+    display: none;
+  }
 .grayText {
   color: #9c9d9f;
 }
@@ -130,13 +134,13 @@ section{
     outline: none;
   }
   .buttonSubmit {
-    top: 0px;
-    right: 0px;
+    top: 2px;
+    right: 3px;
     width: 15vh;
     position: absolute;
     border: 0;
     border-radius: 25px;
-    height: 5vh;
+    height: 90%;
     background-color: #4094b9;
     color: white;
     transition-property: background-color;
